# learnopengl-game-engine

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
learnopenglGameEngine/: CMakeLists.txt  Shader.cpp  camera.h  global_consts.h  learnopengl_game_engine.cpp  learnopengl_game_engine.h  learnopenglmath.cpp  math_utils.h
learnopenglGameEngine/Shaders/: light_source.vert  phong_lit.frag  phong_lit.vert
learnopenglmath/: CMakeLists.txt  Shader.cpp  Shader.h  camera.cpp  camera.h  glad.c  global_consts.h  learnopenglmath.cpp  math_utils.h  models.h  texture.cpp  texture.h
learnopenglmath/Shaders/: cube.frag  cube.vert  light_source.frag  light_source.vert  phong_lit.frag  phong_lit.vert  square.frag  square.vert
